// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/InlineButton Defaults smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton Disabled smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          disabled
          type="button"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton DisabledWithIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK InlineButton_button_withIconLeft__3Y66a  "
          disabled
          type="button"
  >
    <span class="InlineButton_iconWrapper__1jDt6">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 InlineButton_icon__GHhTr"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
    </span>
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithAccesskey smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          accesskey="a"
          type="button"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithAriaDescribedby smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
          aria-describedby="htmlId"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithCustomCss smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   dummyClassname"
          type="button"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithCustomIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK InlineButton_button_withIconLeft__3Y66a  "
          type="button"
  >
    <span class="InlineButton_iconWrapper__1jDt6">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 InlineButton_icon__GHhTr"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2Z">
        </path>
      </svg>
    </span>
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithDataTestid smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          data-testid="123ID"
          type="button"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK InlineButton_button_withIconLeft__3Y66a  "
          type="button"
  >
    <span class="InlineButton_iconWrapper__1jDt6">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 InlineButton_icon__GHhTr"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
    </span>
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithIconRight smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK  InlineButton_button_withIconRight__3d8PZ "
          type="button"
  >
    Legg til rapport
    <span class="InlineButton_iconWrapper__1jDt6">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 InlineButton_icon__GHhTr"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithId smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button id="htmlId"
          class="InlineButton_button__2taCK   "
          type="button"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithLang smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          lang="nb"
          type="button"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithLongText smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
  >
    Denne knappen har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er venstrejustert. Denne knappen har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er venstrejustert.
  </button>
</div>
`;

exports[`Tester/InlineButton WithLongTextAndIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK InlineButton_button_withIconLeft__3Y66a  "
          type="button"
  >
    <span class="InlineButton_iconWrapper__1jDt6">
      <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 InlineButton_icon__GHhTr"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
    </span>
    Denne knappen har en veldig lang tekst med ikon på høyre side. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er høyrejustert. Denne knappen har en veldig lang tekst med ikon på høyre side. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er høyrejustert.
  </button>
</div>
`;

exports[`Tester/InlineButton WithLongTextBreaking smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
  >
    Denneknappenharenveldiglangtekst.Sålangatdentvingerframlinjeskift.Nårikkeikonsåskaltekstenværevenstrejusteres.Denneknappenharenveldiglangtekst.Sålangatdentvingerframlinjeskift.Nårikkeikonsåskaltekstenværevenstrejusteres.
  </button>
</div>
`;

exports[`Tester/InlineButton WithOnBlur smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
  >
    Klikk på knapp for å teste at onBlur virker
  </button>
</div>
`;

exports[`Tester/InlineButton WithOnClick smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
  >
    Klikk på knapp for å teste at onClick virker
  </button>
</div>
`;

exports[`Tester/InlineButton WithOnFocus smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
  >
    Gi knapp fokus for å teste at onFocus virker
  </button>
</div>
`;

exports[`Tester/InlineButton WithRef smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="button"
          id="dummyIdForwardedFromRef"
  >
    Legg til rapport
  </button>
</div>
`;

exports[`Tester/InlineButton WithType smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="InlineButton_button__2taCK   "
          type="submit"
  >
    Legg til rapport
  </button>
</div>
`;
